--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -1,38 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta charset='utf-8'>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <title>TestNG Report</title>
-<style type="text/css">
-table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}
-td,th {border:1px solid #009;padding:.25em .5em}
-.result th {vertical-align:bottom}
-.param th {padding-left:1em;padding-right:1em}
-.param td {padding-left:.5em;padding-right:2em}
-.stripe td,.stripe th {background-color: #E6EBF9}
-.numi,.numi_attn {text-align:right}
-.total td {font-weight:bold}
-.passedodd td {background-color: #0A0}
-.passedeven td {background-color: #3F3}
-.skippedodd td {background-color: #CCC}
-.skippedodd td {background-color: #DDD}
-.failedodd td,.numi_attn {background-color: #F33}
-.failedeven td,.stripe .numi_attn {background-color: #D00}
-.stacktrace {white-space:pre;font-family:monospace}
-.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}
-</style>
+<style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}.invisible {display:none}</style>
 </head>
 <body>
-<table cellspacing="0" cellpadding="0" class="testOverview">
-<tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">Bank Manager Login Test</a></td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">3.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<table>
+<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
+<tr><th colspan="7">Default Suite</th></tr>
+<tr><td><a href="#t0">TestNG_June2021</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">11,289</td><td></td><td></td></tr>
 </table>
-<table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
-<tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr id="t1"><th colspan="5">Bank Manager Login Test &#8212; passed</th></tr>
-<tr class="passedodd"><td>VivekTechnologies.testcases.Login</td><td><a href="#m1"><b>test1</b> (kiana) </a></td><td class="numi">1</td><td>1624962407358</td><td class="numi">3428</td></tr>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">TestNG_June2021 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">VivekTechnologies.testcases.AddCustomerTest</td><td><a href="#m0">addCustomer</a></td><td rowspan="4">1625155395134</td><td rowspan="4">422</td></tr><tr class="passedeven"><td><a href="#m1">addCustomer</a></td></tr><tr class="passedeven"><td><a href="#m2">addCustomer</a></td></tr><tr class="passedeven"><td><a href="#m3">addCustomer</a></td></tr><tr class="passedodd"><td rowspan="1">VivekTechnologies.testcases.Login</td><td><a href="#m4">test1</a></td><td rowspan="1">1625155384801</td><td rowspan="1">3199</td></tr></tbody>
 </table>
-<h1>Bank Manager Login Test</h1>
-<h2 id="m1">VivekTechnologies.testcases.Login:test1</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-</body></html>
+<h2>TestNG_June2021</h2><h3 id="m0">VivekTechnologies.testcases.AddCustomerTest#addCustomer</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>C</td><td>R</td><td>452023.0</td><td>Customer</td></tr><tr><th colspan="4">Messages</th></tr><tr><td colspan="4"><div class="messages">Login Sucessfull-----</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">VivekTechnologies.testcases.AddCustomerTest#addCustomer</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>D</td><td>S</td><td>452024.0</td><td>Customer</td></tr><tr><th colspan="4">Messages</th></tr><tr><td colspan="4"><div class="messages">Login Sucessfull-----</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">VivekTechnologies.testcases.AddCustomerTest#addCustomer</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>B</td><td>Q</td><td>452022.0</td><td>Customer</td></tr><tr><th colspan="4">Messages</th></tr><tr><td colspan="4"><div class="messages">Login Sucessfull-----</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">VivekTechnologies.testcases.AddCustomerTest#addCustomer</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>A</td><td>P</td><td>452021.0</td><td>Customer</td></tr><tr><th colspan="4">Messages</th></tr><tr><td colspan="4"><div class="messages">Login Sucessfull-----</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">VivekTechnologies.testcases.Login#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+</body>
+</html>
