--- a/test-output/old/Default Suite/methods.html
+++ b/test-output/old/Default Suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7da28d">  <td>21/07/01 21:32:56</td>   <td>0</td> <td title="&gt;&gt;TestBase.setup()[pri:0, instance:VivekTechnologies.testcases.Login@1b7cc17c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1550207152</td>   <td></td> </tr>
-<tr bgcolor="67c67e">  <td>21/07/01 21:33:04</td>   <td>8589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.test1()[pri:0, instance:VivekTechnologies.testcases.Login@1b7cc17c]">test1</td> 
-  <td>main@1550207152</td>   <td></td> </tr>
-<tr bgcolor="87bd83">  <td>21/07/01 21:33:08</td>   <td>11829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomer(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:VivekTechnologies.testcases.AddCustomerTest@59662a0b]">addCustomer</td> 
-  <td>main@1550207152</td>   <td></td> </tr>
-<tr bgcolor="87bd83">  <td>21/07/01 21:33:09</td>   <td>13418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomer(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:VivekTechnologies.testcases.AddCustomerTest@59662a0b]">addCustomer</td> 
-  <td>main@1550207152</td>   <td></td> </tr>
-<tr bgcolor="87bd83">  <td>21/07/01 21:33:15</td>   <td>18922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomer(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:VivekTechnologies.testcases.AddCustomerTest@59662a0b]">addCustomer</td> 
-  <td>main@1550207152</td>   <td></td> </tr>
-<tr bgcolor="87bd83">  <td>21/07/01 21:33:15</td>   <td>19344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomer(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:VivekTechnologies.testcases.AddCustomerTest@59662a0b]">addCustomer</td> 
-  <td>main@1550207152</td>   <td></td> </tr>
-<tr bgcolor="7da28d">  <td>21/07/01 21:33:16</td>   <td>19877</td> <td title="&lt;&lt;TestBase.teardown()[pri:0, instance:VivekTechnologies.testcases.Login@1b7cc17c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1550207152</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>21/07/01 22:19:02</td>   <td>0</td> <td title="&gt;&gt;TestBase.setup()[pri:0, instance:VivekTechnologies.testcases.Login@4f83df68]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@168907708</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/07/01 22:19:07</td>   <td>5448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.test1()[pri:0, instance:VivekTechnologies.testcases.Login@4f83df68]">test1</td> 
+  <td>main@168907708</td>   <td></td> </tr>
+<tr bgcolor="c6f1ae">  <td>21/07/01 22:19:10</td>   <td>8550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomer(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:VivekTechnologies.testcases.AddCustomerTest@6cf0e0ba]">addCustomer</td> 
+  <td>main@168907708</td>   <td></td> </tr>
+<tr bgcolor="c6f1ae">  <td>21/07/01 22:19:11</td>   <td>9181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomer(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:VivekTechnologies.testcases.AddCustomerTest@6cf0e0ba]">addCustomer</td> 
+  <td>main@168907708</td>   <td></td> </tr>
+<tr bgcolor="c6f1ae">  <td>21/07/01 22:19:12</td>   <td>9661</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomer(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:VivekTechnologies.testcases.AddCustomerTest@6cf0e0ba]">addCustomer</td> 
+  <td>main@168907708</td>   <td></td> </tr>
+<tr bgcolor="c6f1ae">  <td>21/07/01 22:19:12</td>   <td>10123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomer(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:VivekTechnologies.testcases.AddCustomerTest@6cf0e0ba]">addCustomer</td> 
+  <td>main@168907708</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>21/07/01 22:19:12</td>   <td>10625</td> <td title="&lt;&lt;TestBase.teardown()[pri:0, instance:VivekTechnologies.testcases.Login@4f83df68]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@168907708</td>   <td></td> </tr>
 </table>
