remote drive implementation
remote drive implementation

--- a/test-output/html/groupsresults.html
+++ b/test-output/html/groupsresults.html
@@ -55,10 +55,10 @@
 	    	  		</tr>
   	</thead>
   	<tbody>
-  		<tr class="parent" id="row0" title="Click to expand/collapse" style="cursor: pointer;" onclick="changeIcon('span-c5516703-03a6-4913-b2f4-c79770506c8e'); ">
-<td><span id="span-c5516703-03a6-4913-b2f4-c79770506c8e" class="glyphicon glyphicon-minus" style="color:blue"></span></td>
-<td align="left">kiana</td><td align="center">00:00:02</td><td align="center" class="passed number">4</td><td align="center" class="zero number">0</td><td align="center" class="zero number">0</td></tr>
-<tr class="child-row0" style="display: table-row;"><td></td><td><a href="suite1_test1_results.html">VivekTechnologies.testcases.AddCustomerTest</a></td><td align="center">00:00:01</td><td align="center" class="passedCell">2</td><td align="center" class="zero number">0</td><td align="center" class="zero number">0</td><tr class="child-row0" style="display: table-row;"><td></td><td><a href="suite1_test1_results.html">VivekTechnologies.testcases.Login</a></td><td align="center">00:00:01</td><td align="center" class="passedCell">2</td><td align="center" class="zero number">0</td><td align="center" class="zero number">0</td>
+  		<tr class="parent" id="row0" title="Click to expand/collapse" style="cursor: pointer;" onclick="changeIcon('span-652a9346-5908-431c-b157-c49fc045d1d0'); ">
+<td><span id="span-652a9346-5908-431c-b157-c49fc045d1d0" class="glyphicon glyphicon-minus" style="color:blue"></span></td>
+<td align="left">kiana</td><td align="center">00:00:01</td><td align="center" class="passed number">1</td><td align="center" class="zero number">0</td><td align="center" class="zero number">0</td></tr>
+<tr class="child-row0" style="display: table-row;"><td></td><td><a href="suite1_test1_results.html">VivekTechnologies.testcases.Login</a></td><td align="center">00:00:01</td><td align="center" class="passedCell">1</td><td align="center" class="zero number">0</td><td align="center" class="zero number">0</td>
 
   	</tbody>
 </table>
