--- a/test-output/html/suite1_test1_results.html
+++ b/test-output/html/suite1_test1_results.html
@@ -68,7 +68,7 @@
 	    		<span class="tooltiptextCustom">Copy Suite file name</span>
 			</div>
 	    </th> 
-	  	<th id="suiteXMLId">C:\Users\vivsahu\Desktop\SeleniumUI\Project1\TestNG_June2021\src\test\resources\runner\testng.xml</th>
+	  	<th id="suiteXMLId">C:\Users\Avenger\IdeaProjects\TestNG_June2021\src\test\resources\runner\testng.xml</th>
 	  	<th id="suiteXMLNameId" hidden="true">testng.xml</th>
 	  </tr>
 	  	  <tr>
@@ -79,7 +79,7 @@
 	  <tr>
 	    <th>Total Steps : </th>
 	   	<th></th>
-	    <th>2</th> 
+	    <th>1</th> 
 	  </tr>
 	  <tr>
 	    <th>Status : </th>
@@ -112,45 +112,23 @@
 				
 				
 												<tr>
-			<td class="time">1626343121403</td>
-			<td class="header passed" colspan="4" onClick="toggleElement('040a6e9c-2cce-4e6f-b7f8-1e8b2f4cdc6d','block');changeSingleIcon('span-040a6e9c-2cce-4e6f-b7f8-1e8b2f4cdc6d');" title="Click to expand/collapse" style="cursor: pointer;">
-			<div style="float:left;"><i>Class&nbsp;:&nbsp;</i>VivekTechnologies.testcases.AddCustomerTest</div>
-			<div style="float:right;">@Test &nbsp;&nbsp;<span id='span-040a6e9c-2cce-4e6f-b7f8-1e8b2f4cdc6d' class="glyphicon glyphicon-menu-down"></span></div>
-			</td>
-			</tr>
-			<tr>
-	<td class="time">1626343121403</td>
-	<td class="methodTest">
-		<span class="description"><b>Method: </b>addCustomer</span><br>
-			<span class="description"><b>Description: </b></span><br>
-				<span class="description"><b>Priority: </b><font color='blue'>2</font></span><br>
-					<span class="description"><b>Groups: </b><font color='green'>kiana</font></span><br>
-				<span class="duration"><b>Duration: </b>0.684s</span><br>
-	</td>
-	<td class="result">
-						<div class="stackTrace" id="040a6e9c-2cce-4e6f-b7f8-1e8b2f4cdc6d" style="display: block;">
-					</td>
-	</div>
-</tr>
-										<tr>
-			<td class="time">1626343120282</td>
-			<td class="header passed" colspan="4" onClick="toggleElement('de8442e7-5c45-4e86-b01f-a864b1558a50','block');changeSingleIcon('span-de8442e7-5c45-4e86-b01f-a864b1558a50');" title="Click to expand/collapse" style="cursor: pointer;">
+			<td class="time">1626677313800</td>
+			<td class="header passed" colspan="4" onClick="toggleElement('86c1172a-a48d-45f9-9b06-38bc1eae951b','block');changeSingleIcon('span-86c1172a-a48d-45f9-9b06-38bc1eae951b');" title="Click to expand/collapse" style="cursor: pointer;">
 			<div style="float:left;"><i>Class&nbsp;:&nbsp;</i>VivekTechnologies.testcases.Login</div>
-			<div style="float:right;">@Test &nbsp;&nbsp;<span id='span-de8442e7-5c45-4e86-b01f-a864b1558a50' class="glyphicon glyphicon-menu-down"></span></div>
+			<div style="float:right;">@Test &nbsp;&nbsp;<span id='span-86c1172a-a48d-45f9-9b06-38bc1eae951b' class="glyphicon glyphicon-menu-down"></span></div>
 			</td>
 			</tr>
 			<tr>
-	<td class="time">1626343120282</td>
+	<td class="time">1626677313800</td>
 	<td class="methodTest">
 		<span class="description"><b>Method: </b>test1</span><br>
-			<span class="description"><b>Description: </b></span><br>
 				<span class="description"><b>Priority: </b><font color='blue'>1</font></span><br>
 					<span class="description"><b>Groups: </b><font color='green'>kiana</font></span><br>
-				<span class="duration"><b>Duration: </b>1.115s</span><br>
+				<span class="duration"><b>Duration: </b>1.113s</span><br>
 	</td>
 	<td class="result">
 					<i>Method arguments: </i><span class="arguments">"google.com parameterization from xml"</span><br>
-				<div class="stackTrace" id="de8442e7-5c45-4e86-b01f-a864b1558a50" style="display: block;">
+				<div class="stackTrace" id="86c1172a-a48d-45f9-9b06-38bc1eae951b" style="display: block;">
 					</td>
 	</div>
 </tr>
